# Rust-minimal-nostd

./: Cargo.toml  Makefile
.cargo/: config
01_assembly/: Cargo.toml
01_assembly/src/: main.rs
02_extern-start/src/: main.rs
03_extern-main/: Cargo.toml
03_extern-main/src/: main.rs
04_crate/: Cargo.toml
04_crate/src/: main.rs
src/: main.rs
