[package]
name = "no_std_test"
version = "0.1.0"
authors = ["Zsolt Krüpl <hg2ecz@ham.hu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
